--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=JFSDProject
 server.port=2026
 
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://root:FnkXCkxLyBYYWlOoRWbIqoVggkgJAfaY@junction.proxy.rlwy.net:44237/railway
+spring.datasource.url=jdbc:mysql://localhost:3306/jfsdproject
 spring.datasource.username=root
-spring.datasource.password=FnkXCkxLyBYYWlOoRWbIqoVggkgJAfaY
-
+spring.datasource.password=Root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
