--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=JFSDProject
 server.port=2026
 
-spring.datasource.url=jdbc:mysql://localhost:3306/jfsdproject
+spring.datasource.url=jdbc:mysql://root:PHUmDvhHchFXmeyqTepqIzdTuPjunBaC@autorack.proxy.rlwy.net:34264/railway
 spring.datasource.username=root
-spring.datasource.password=Root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=PHUmDvhHchFXmeyqTepqIzdTuPjunBaC
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
